--- a/Class_Digital/templates/cd_app/base.html
+++ b/Class_Digital/templates/cd_app/base.html
@@ -72,9 +72,9 @@
           <div class="col-md-3">
             <h6>Navigasi</h6>
             <ul class="list-unstyled">
-              <li><a href="#" class="text-light">Home</a></li>
-              <li><a href="#tentangkami" class="text-light">Tentang Kami</a></li>
-              <li><a href="#panduan" class="text-light">Panduan</a></li>
+              <li><a href="{% url 'home' %}" class="text-light">Home</a></li>
+              <li><a href="{% url 'home' %}#tentangkami" class="text-light">Tentang Kami</a></li>
+              <li><a href="{% url 'home' %}#panduan" class="text-light">Panduan</a></li>
             </ul>
           </div>
           <div class="col-md-3">
