--- a/Class_Digital/templates/cd_app/class.html
+++ b/Class_Digital/templates/cd_app/class.html
@@ -1,7 +1,11 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
+    <style>
+        #sidebar .sidebar-link {
+            text-decoration: none;
+        }
+    </style>
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -15,13 +19,13 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet" />
-    <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
-        integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </head>
 
-<body>
+  <body>
     <div class="wrapper">
         <aside id="sidebar">
             <div class="d-flex">
@@ -29,62 +33,60 @@
                     <i class="lni lni-menu"></i>
                 </button>
                 <div class="sidebar-logo">
-                    <a href="#" style="text-decoration: none;">Halaman Kelas</a>
+                    <a href="#">Halaman Kelas</a>
                 </div>
             </div>
             <nav class="nav navbar-expand-lg bg-transparent">
                 <div class="container-fluid mx-5">
                     <div class="ms-auto">
-                        <a class="navbar-brand" id="logo-Text-home" href="{% url 'cd_app:dashboard' %}">Class
-                            Digital</a>
+                        <a class="navbar-brand" id="logo-Text-home" href="{% url 'cd_app:dashboard' %}">Class Digital</a>
                     </div>
                 </div>
             </nav>
-            <ul class="sidebar-nav">
-                <li class="sidebar-item">
-                    <a href="{% url 'cd_app:dashboard' %}" class="sidebar-link" style="text-decoration: none;">
-                    <i class="lni lni-home"></i>
-                    <span>Dashboard</span>
+                <ul class="sidebar-nav">
+                    <li class="sidebar-item">
+                        <a href="{% url 'cd_app:dashboard' %}" class="sidebar-link">
+                        <i class="lni lni-home"></i>
+                        <span>Dashboard</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-item">
+                        <a href="{% url 'cd_app:forum' course.id %}" class="sidebar-link">
+                        <i class="fa-solid fa-list-check"></i>
+                        <span>Forum</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-item">
+                        <a href="{% url 'cd_app:presence' course.id %}" class="sidebar-link">
+                        <i class="fa-solid fa-person-chalkboard"></i>
+                        <span>Kehadiran</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-item">
+                        <a href="{% url 'cd_app:task' course.id %}" class="sidebar-link">
+                        <i class="fa-solid fa-bars-progress"></i>
+                        <span>Materi</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-item">
+                        <a href="{% url 'cd_app:recap' course.id %}" class="sidebar-link">
+                        <i class="fa-solid fa-ranking-star"></i>
+                        <span>Rekap</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-item">
+                        <a href="{% url 'cd_app:list' course.id %}" class="sidebar-link">
+                        <i class="fa-solid fa-users-line"></i>
+                        <span>Mahasiswa</span>
+                        </a>
+                    </li>
+                </ul>
+                <div class="sidebar-footer">
+                    <a href="{% url 'logout' %}" class="sidebar-link" onclick="return confirm('Apakah Anda yakin ingin logout?');">
+                        <i class="lni lni-exit"></i>
+                        <span>Logout</span>
                     </a>
-                </li>
-                <li class="sidebar-item">
-                    <a href="{% url 'cd_app:forum' %}" class="sidebar-link" style="text-decoration: none;">
-                    <i class="fa-solid fa-list-check"></i>
-                    <span>Forum</span>
-                    </a>
-                </li>
-                <li class="sidebar-item">
-                    <a href="{% url 'cd_app:presence' %}" class="sidebar-link" style="text-decoration: none;">
-                    <i class="fa-solid fa-person-chalkboard"></i>
-                    <span>Kehadiran</span>
-                    </a>
-                </li>
-                <li class="sidebar-item">
-                    <a href="{% url 'cd_app:task' %}" class="sidebar-link" style="text-decoration: none;">
-                    <i class="fa-solid fa-bars-progress"></i>
-                    <span>Tugas</span>
-                    </a>
-                </li>
-                <li class="sidebar-item">
-                    <a href="{% url 'cd_app:recap' %}" class="sidebar-link" style="text-decoration: none;">
-                    <i class="fa-solid fa-ranking-star"></i>
-                    <span>Rekap</span>
-                    </a>
-                </li>
-                <li class="sidebar-item">
-                    <a href="{% url 'cd_app:list' %}" class="sidebar-link" style="text-decoration: none;">
-                    <i class="fa-solid fa-users-line"></i>
-                    <span>Mahasiswa</span>
-                    </a>
-                </li>
-            </ul>
-            <div class="sidebar-footer">
-                <a href="{% url 'logout' %}" class="sidebar-link"
-                    onclick="return confirm('Apakah Anda yakin ingin logout?');" style="text-decoration: none;" style="text-decoration: none;">
-                    <i class="lni lni-exit"></i>
-                    <span>Logout</span>
-                </a>
-            </div>
+                </div> 
         </aside>
         <!-- Main Content -->
         <div class="container my-5">
@@ -92,16 +94,22 @@
             {% endblock %}
         </div>
     </div>
+    
+</body>
     <script src="https://code.jquery.com/jquery-3.7.1.js"
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <script>
+    <script> 
         $(document).ready(function () {
-            $('.toggle-btn').on('click', function () {
-                $('#sidebar').toggleClass('expand');
+            // Toggle sidebar
+            $(".toggle-btn").click(function () {
+                $("#sidebar").toggleClass("expand");
+            });
+        
+            // Toggle dropdown menu  "Class"
+            $(".has-dropdown").click(function (e) {
+                e.preventDefault();
+                $(this).next(".sidebar-dropdown").slideToggle(300);
             });
         });
     </script>
-
-</body>
-
 </html>
